module_0: add comments

--- a/module_0/module_0_main.ipynb
+++ b/module_0/module_0_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,50 +11,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def game_core_v3(number):\n",
-    "    '''Сначала устанавливаем любое random число, а потом уменьшаем или увеличиваем его в зависимости от того, больше оно или меньше нужного.\n",
-    "       Функция принимает загаданное число и возвращает число попыток'''\n",
+    "def game_core(number):\n",
+    "    '''Guessing number program'''\n",
     "    count = 1\n",
     "    predict = np.random.randint(1,101)\n",
-    "    left = 0\n",
-    "    right = predict\n",
+    "    left_border = 0\n",
+    "    right_border = predict\n",
+    "    step = 10 #initiating a step\n",
     "    while number != predict:\n",
-    "        count+=1\n",
-    "        if number > predict: \n",
-    "            left = predict+1\n",
-    "            predict = predict+10\n",
-    "            right = predict\n",
-    "        elif number < predict:\n",
-    "            right = predict - 1\n",
-    "            predict =  int((left + right)/2)\n",
+    "        count += 1\n",
+    "        if number>predict: \n",
+    "            left_border=predict+1\n",
+    "            predict=predict+step\n",
+    "            right_border=predict\n",
+    "            \n",
+    "        elif number<predict:\n",
+    "            right_border=predict-1\n",
+    "            predict =  int((left_border+right_border) / 2)\n",
+    "            \n",
     "    return(count) # выход из цикла, если угадали\n",
+    "\n",
     "\n",
     "def score_game(game_core):\n",
     "    '''Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число'''\n",
     "    count_ls = []\n",
-    "    np.random.seed(1)  # фиксируем RANDOM SEED, чтобы ваш эксперимент был воспроизводим!\n",
+    "    np.random.seed(1)  # fixation RANDOM SEED\n",
     "    random_array = np.random.randint(1,101, size=(1000))\n",
     "    for number in random_array:\n",
     "        count_ls.append(game_core(number))\n",
     "    score = int(np.mean(count_ls))\n",
-    "    print(f\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
+    "   \n",
+    "    print(\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
     "    return(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за 8 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за {score} попыток\n"
      ]
     },
     {
@@ -63,13 +67,13 @@
        "8"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score_game(game_core_v3)"
+    "score_game(game_core)"
    ]
   },
   {
