module_0: add comments

--- a/module_0/module_0_main.ipynb
+++ b/module_0/module_0_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,19 +25,18 @@
     "    while number != predict:\n",
     "        count += 1\n",
     "        if number>predict: \n",
-    "            left_border=predict+1\n",
-    "            predict=predict+step\n",
-    "            right_border=predict\n",
+    "            left_border = predict + 1\n",
+    "            predict = predict + step #increase in estimated number\n",
+    "            right_border = predict\n",
     "            \n",
     "        elif number<predict:\n",
-    "            right_border=predict-1\n",
-    "            predict =  int((left_border+right_border) / 2)\n",
-    "            \n",
-    "    return(count) # выход из цикла, если угадали\n",
+    "            right_border = predict - 1\n",
+    "            predict =  int((left_border+right_border) / 2) #determination of the average value            \n",
+    "    return(count)\n",
     "\n",
     "\n",
     "def score_game(game_core):\n",
-    "    '''Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число'''\n",
+    "    '''Function of initializing the guessed number and starting the game'''\n",
     "    count_ls = []\n",
     "    np.random.seed(1)  # fixation RANDOM SEED\n",
     "    random_array = np.random.randint(1,101, size=(1000))\n",
@@ -45,20 +44,20 @@
     "        count_ls.append(game_core(number))\n",
     "    score = int(np.mean(count_ls))\n",
     "   \n",
-    "    print(\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
+    "    print(\"Ваш алгоритм угадывает число в среднем за\", score, \"попыток\")\n",
     "    return(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за {score} попыток\n"
+      "Ваш алгоритм угадывает число в среднем за 8 попыток\n"
      ]
     },
     {
@@ -67,7 +66,7 @@
        "8"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
