--- a/module_1/Movies_IMBD_v4.1_TEMPLATE.ipynb
+++ b/module_1/Movies_IMBD_v4.1_TEMPLATE.ipynb
@@ -1626,6 +1626,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data['Reviews'].str.split(', \\[\\'', expand=True)\n",
+    "df[1] = df[1].str.strip(']')\n",
+    "df[1] = df[1].str.strip('\\'')\n",
+    "\n",
+    "# разделеине 2-х дат на различные столбцы для получения разницы\n",
+    "df = df[1].str.split('\\', \\'', expand=True)\n",
+    "df[0] = df[0].fillna(0)\n",
+    "df[1] = df[1].fillna(0)\n",
+    "df[0] = pd.to_datetime(df[0])\n",
+    "df[1] = pd.to_datetime(df[1])\n",
+    "\n",
+    "data['count_day_reviews'] = df[0] - df[1]\n",
+    "        \n",
+    "date_today = datetime.strptime('2020-09-20', '%Y-%m-%d')\n",
+    "data['count_day_reviews_today'] = date_today - df[0]\n",
+    "\n",
+    "# конвертируем datetime в int для модели обучения\n",
+    "data['count_day_reviews'] = data['count_day_reviews'] / pd.to_timedelta('1D')\n",
+    "data['count_day_reviews_today'] = data['count_day_reviews_today'] / \\\n",
+    "        pd.to_timedelta('1D')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 124,
    "metadata": {
     "colab": {},
